* fixed the font weigths for the domain and the links * fixed how the icon is rendered so it shows properly on mobile

--- a/client/components/domains/domain-search-results/style.scss
+++ b/client/components/domains/domain-search-results/style.scss
@@ -66,20 +66,22 @@ body.is-section-signup.is-white-signup {
 
 .domain-search-results__domain-available-notice {
 	display: flex;
+	.domain-search-results__domain-available-notice-icon {
+		margin-top: 2px;
+		margin-right: 8px;
+		svg {
+			fill: var( --color-neutral-20 );
+			width: 20px;
+			height: 20px;
+		}
+	}
 	span {
 		font-size: $font-body-small;
 		color: var( --color-text-subtle );
 		a {
 			color: var( --color-text );
 			text-decoration: underline;
-			font-weight: 400;
+			font-weight: 600;
 		}
-	}
-	svg {
-		fill: var( --color-neutral-20 );
-		margin-right: 8px;
-		width: 20px;
-		height: 20px;
-		margin-top: 2px;
 	}
 }
